# monsys

./: .gitignore  CMakeLists.txt  Makefile  README.md  adb_tcpdump.sh  config.mk  env.sh  errinfo.txt  interface.txt  interfaces.txt  monsys.sublime-project  monsys.sublime-workspace  mysqltest.cc
3rd/gmock-1.6.0/: Makefile  config.status  libtool
3rd/gmock-1.6.0/gtest/: Makefile  config.status  libtool
3rd/gmock-1.6.0/gtest/scripts/: gtest-config
3rd/gmock-1.6.0/scripts/: gmock-config
center/: Makefile  fgw_handler.cc  fgw_handler.h  fgw_server.cc  fgw_server.h  fgw_session.h  main.cc  module.h  push_message.cc  push_message.h  zinner_message_ex.h  zwebapi_handler.cc  zwebapi_handler.h  zwebapi_server.cc  zwebapi_server.h  zwebapi_session.cc  zwebapi_session.h
center/framework/: zclient.cc  zdispatcher.cc  zdispatcher.h  zmodule.h  zserver_handler.cc
client/android/: AndroidManifest.xml  local.properties
client/android/res/layout/: activity_bind.xml  activity_dev_list.xml  activity_login.xml  activity_main.xml  activity_smartlight.xml
client/android/res/xml/: preference_config.xml
client/tmp/android/res/layout/: activity_fgw_list.xml  dev_item.xml  (+1 more)
database/: db.sh  monsys_db.sql
design/: SmartZJC.graffle  interface.md  interface.txt  introduce_and_plan.md  mon_sys.graffle  monsys_server.graffle  server.txt
doc/: algorithm.md  cubieboard2.md  embedded_linux_arm.md  game_engine.md  git.md  mac_driver.md  misc.md  mysql.md  notes.md  numpy.md  permutation.md  python_math.md  spec.md  tornado.md  twos_complement.md  web_for_phone.md  webpy.md  why_do_i_hate_xml.md  yield_in_python.md
doc/android/: async_task.md
doc/python/: gevent.md
doc/tmp/: interface.html
graffles/: async_task.graffle
libbase/: Makefile  main.cc  ts  zb_msg.c  zcodec.c  zcodec.h  zcodecpp.h  zlog.c  zlog.h  zstring.c  zstring.h  ztypes.h
libbase/algorithm/: a.out  base64.cc  zstring_search.cc
libbase/libbase.so.dSYM/Contents/: Info.plist
libframework/: Makefile  main.cc  thread.cc  thread.h  zbyte_buffer.cc  zbyte_buffer.h  zclient.cc  zclient.h  zclient_handler.h  zcodecpp.h  zdata_buffer.h  zdispatcher.cc  zdispatcher.h  zerrno.h  zevent_proxy.h  zframework.h  zhandler.h  zinner_message.h  zlog_wrapper.cc  zlog_wrapper.h  zmodule.h  zserver.cc  zserver.h  zserver_handler.cc  zserver_handler.h  zsession.h  zsession_ctrl.h  zstream.h  ztime.h  ztimer.h  ztypes.h  zutil.cc  zutil.h
libframework/algorithm/: prac.cc  prac.h  zstring_search.cc  zstring_search.h
libframework/libframework.a.dSYM/Contents/: Info.plist
libmonsys/: Makefile  main.c  main.d  z_codec.c  z_codec.h  zb_msg.h  zlog.c  zlog.d  zlog.h  zmessage.h  zmessage_codec.c  zmessage_codec.d  zmessage_codec.h  ztypes.h  zzigbee_message.cc  zzigbee_message.h
libzigbee/: Makefile  main.cc  zb_codec.c  zb_transfer_layer.h  zbdefines.h  zbdevice_manager.cc  zbdevice_manager.h  zzigbee_codec.h  zzigbee_message.cc  zzigbee_message.h
libzigbee/libzb.so.dSYM/Contents/: Info.plist
protocol/: center.proto  client.proto  comm_server.proto  demo1.proto  demo2.proto  exchange.proto  gen.bat  gen.sh  push.proto  route.proto
server/: Makefile  Session.vim  a.out  center  center.cc  center.mk  center.pb.cc  center.pb.h  client.pb.cc  client.pb.h  comm_server.pb.cc  comm_server.pb.h  config.cfg  database.h  echo_server.cc  echo_server.h  exchange.pb.cc  exchange.pb.h  fgw  fgw.cc  fgw.conf  fgw.mk  fgw_client.cc  fgw_client.h  fgw_client_handler.cc  fgw_client_handler.h  fgw_client_session.h  fgw_handler.cc  fgw_handler.h  fgw_manager.cc  fgw_manager.h  fgw_server.cc  fgw_server.h  fgw_server_handler.cc  fgw_server_handler.h  fgw_session.h  fgw_ut  main.cc  module.cc  module.h  (+107 more)
server/center.dSYM/Contents/: Info.plist
server/framework/: zclient_handler.h  zdispatcher.cc  zdispatcher.h  zframework.h  zhandler.h  zinner_message.h  ztime.h
server/java/MonsysServer/: MonsysServer.eml  TODO.txt  clear.sh  create_vnic.sh  pushserver.log.0  run.sh  util.py  week01.py
server/java/MonsysServer/conf/: center.cfg  common.cfg  push.cfg  router.cfg
server/python/: center.py  context.py  core_wireless_control.py  database.py  dispatcher.py  env.py  fgw.py  fgw_client.py  fgw_manager.py  fgw_server.py  log.py  module_define.py  msg.py  session.py  simple_client.py  simple_handler.py  simple_server.py  test.py  webapi_server.py  webapi_server.py.bak
server/scala/MonsysCommon/: build.sbt
stub/: Makefile  ana.sh  fgw_client.cc  fgw_client.h  fgw_client_handler.cc  fgw_client_handler.h  main.cc  module.h  push_message.cc  push_message.h  ts
stub/framework/: zclient.h  zframework.h  zinner_message.h  zserver.cc  zserver_handler.h  zsession.h  zsession_ctrl.h
tools/: code_stat.py  echo_server.py  fetch_site.sh  flickr_fetcher.py  gevent_test.py  http_utils.py  java_heap_dump.sh  sync.sh
unittest/: Makefile  test_bytes_matcher.cc  test_string_search.cc  test_zcodecpp.cc  test_zigbee_message.cc  test_zutil.cc  unittest  unittest.cc
web/nginx-1.2.6/: build.sh  c.sh  t.sh
web/nginx-1.2.6/conf/: nginx.conf
web/nginx-1.2.6/html/: mon_sys.css  mon_sys.html  mon_sys.js  test.css  test.html  test.js
web/nginx-1.2.6/html/mon_sys_home/: common.js  index.html  main_ctrl.js  mon_sys.css  mon_sys.js  smart_light.js  test.css  test.html
web/nginx-1.2.6/src/monsys/: config  ngx_http_mon_sys_module.c.handle  ngx_http_monsys_module.c  todo.txt
web/prototype/: index.html
web/prototype/css/: ui.css
web/prototype/js/: main.js
web/python/: echo_server.py  main.py  monsys.py  tcpclient.py  test.py
web/python/static/: bind.html  common.js  index.html  login.html  main_ctrl.js  mon_sys.css  mon_sys.js  register.html  smart_light.js  user-center.html
web/python/static/css/: test.css  ui.css
web/python/static/js/: dev_common.js  dev_ctrl.js  env.js  fgw_ctrl.js  main.js  main_ctrl.js  monsys.js  purl.js  util.js
web/python/static/prac/: css3d_cube.css  css3d_cube.html
web/python/templates/: base.html  dev_list.html  fgw_list.html  index.html
xcode/monsys/monsys/: monsys.1
xcode/monsys/monsys.xcodeproj/: project.pbxproj
(+200 files in other folders)
