cmake_minimum_required(VERSION 3.1)
project(monsys)

include_directories(.)
include_directories(libs/include)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    libframework/algorithm/zstring_search.cc
    libframework/algorithm/zstring_search.h
    libframework/zcodec.c
    libframework/zcodec.h
    libframework/zcodecpp.h
    libframework/ztypes.h
    libframework/main.cc
    libframework/zbyte_buffer.cc
    libframework/zbyte_buffer.h
    libframework/zclient.cc
    libframework/zclient.h
    libframework/zclient_handler.h
    libframework/zdata_buffer.h
    libframework/zdispatcher.cc
    libframework/zdispatcher.h
    libframework/zerrno.h
    libframework/zevent_proxy.h
    libframework/zframework.h
    libframework/zhandler.h
    libframework/zinner_message.h
    libframework/zmodule.h
    libframework/zserver.cc
    libframework/zserver.h
    libframework/zserver_handler.cc
    libframework/zserver_handler.h
    libframework/zsession.h
    libframework/zsession_ctrl.h
    libframework/zstream.h
    libframework/ztime.h
    libframework/ztimer.h
    libframework/zutil.cc
    libframework/zutil.h
    libframework/zlog_wrapper.cc
    server/zb_codec.c
    server/zb_codec.h
    server/zb_msg.h
    server/zb_transfer_layer.h
    server/zbdefines.h
    server/zbdevice_manager.cc
    server/zbdevice_manager.h
    server/zzigbee_codec.h
    server/zzigbee_message.cc
    server/zzigbee_message.h
    server/center.cc
    server/center.pb.cc
    server/center.pb.h
    server/client.pb.cc
    server/client.pb.h
    server/comm_server.pb.cc
    server/comm_server.pb.h
    server/database.h
    server/echo_server.cc
    server/echo_server.h
    server/exchange.pb.cc
    server/exchange.pb.h
    server/fgw.cc
    server/fgw_client.cc
    server/fgw_client.h
    server/fgw_client_handler.cc
    server/fgw_client_handler.h
    server/fgw_client_session.h
    server/fgw_manager.cc
    server/fgw_manager.h
    server/fgw_server.cc
    server/fgw_server.h
    server/fgw_server_handler.cc
    server/fgw_server_handler.h
    server/fgw_session.h
    server/module.cc
    server/module.h
    server/msg_factory.cc
    server/msg_factory.h
    server/protobuf_convert.cc
    server/protobuf_convert.h
    server/protobuf_helper.cc
    server/protobuf_helper.h
    server/push.pb.cc
    server/push.pb.h
    server/push_codec.h
    server/push_msg.cc
    server/push_msg.h
    server/route.pb.cc
    server/route.pb.h
    server/syn_byte_matcher.h
    server/test.cc
    server/test_push_msg.cc
    server/test_zbstream.cc
    server/test_zigbee_message.cc
    server/unittest.cc
    server/unittest_main.cc
    server/unittest_main.h
    server/webapi_msg.cc
    server/webapi_msg.h
    server/zb_stream.cc
    server/zb_stream.h
    server/zconfig.cc
    server/zconfig.h
    server/zformatter.cc
    server/zformatter.h
    server/zgenerator.h
    server/zinner_message_ex.cc
    server/zinner_message_ex.h
    server/zjson_codec.h
    server/zroute.cc
    server/zroute.h
    server/zserial.cc
    server/zserial.h
    server/zstate.h
    server/zwebapi_handler.cc
    server/zwebapi_handler.h
    server/zwebapi_msg.cc
    server/zwebapi_msg.h
    server/zwebapi_server.cc
    server/zwebapi_server.h
    server/zwebapi_session.cc
    server/zwebapi_session.h
    server/zzigbee_handler.cc
    server/zzigbee_handler.h
    server/zzigbee_session.h)

add_executable(monsys ${SOURCE_FILES} libframework/thread.cpp libframework/thread.h server/upload_worker.cpp server/upload_worker.h)